; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_lavfi.c_free_graph.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_lavfi.c_free_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lavfi = type { i32, i32, i32, i64, i64, i32, %struct.lavfi_pad**, i32 }
%struct.lavfi_pad = type { i32, i32, i32, i32*, i32* }

@MP_NOPTS_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lavfi*)* @free_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_graph(%struct.lavfi* %0) #0 {
  %2 = alloca %struct.lavfi*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.lavfi_pad*, align 8
  store %struct.lavfi* %0, %struct.lavfi** %2, align 8
  %5 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %6 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %5, i32 0, i32 7
  %7 = call i32 @avfilter_graph_free(i32* %6)
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %33, %1
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %11 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp slt i32 %9, %12
  br i1 %13, label %14, label %36

14:                                               ; preds = %8
  %15 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %16 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %15, i32 0, i32 6
  %17 = load %struct.lavfi_pad**, %struct.lavfi_pad*** %16, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.lavfi_pad*, %struct.lavfi_pad** %17, i64 %19
  %21 = load %struct.lavfi_pad*, %struct.lavfi_pad** %20, align 8
  store %struct.lavfi_pad* %21, %struct.lavfi_pad** %4, align 8
  %22 = load %struct.lavfi_pad*, %struct.lavfi_pad** %4, align 8
  %23 = getelementptr inbounds %struct.lavfi_pad, %struct.lavfi_pad* %22, i32 0, i32 4
  store i32* null, i32** %23, align 8
  %24 = load %struct.lavfi_pad*, %struct.lavfi_pad** %4, align 8
  %25 = getelementptr inbounds %struct.lavfi_pad, %struct.lavfi_pad* %24, i32 0, i32 0
  store i32 -1, i32* %25, align 8
  %26 = load %struct.lavfi_pad*, %struct.lavfi_pad** %4, align 8
  %27 = getelementptr inbounds %struct.lavfi_pad, %struct.lavfi_pad* %26, i32 0, i32 3
  store i32* null, i32** %27, align 8
  %28 = load %struct.lavfi_pad*, %struct.lavfi_pad** %4, align 8
  %29 = getelementptr inbounds %struct.lavfi_pad, %struct.lavfi_pad* %28, i32 0, i32 2
  %30 = call i32 @mp_frame_unref(i32* %29)
  %31 = load %struct.lavfi_pad*, %struct.lavfi_pad** %4, align 8
  %32 = getelementptr inbounds %struct.lavfi_pad, %struct.lavfi_pad* %31, i32 0, i32 1
  store i32 0, i32* %32, align 4
  br label %33

33:                                               ; preds = %14
  %34 = load i32, i32* %3, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %3, align 4
  br label %8

36:                                               ; preds = %8
  %37 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %38 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %37, i32 0, i32 1
  store i32 0, i32* %38, align 4
  %39 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %40 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %39, i32 0, i32 2
  store i32 0, i32* %40, align 8
  %41 = load i32, i32* @MP_NOPTS_VALUE, align 4
  %42 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %43 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %42, i32 0, i32 5
  store i32 %41, i32* %43, align 8
  %44 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %45 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %44, i32 0, i32 4
  store i64 0, i64* %45, align 8
  %46 = load %struct.lavfi*, %struct.lavfi** %2, align 8
  %47 = getelementptr inbounds %struct.lavfi, %struct.lavfi* %46, i32 0, i32 3
  store i64 0, i64* %47, align 8
  ret void
}

declare dso_local i32 @avfilter_graph_free(i32*) #1

declare dso_local i32 @mp_frame_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
